WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23848
REGRESSION: Crash when mouse cursor moves over a link on www.opportuno.de
https://bugs.webkit.org/show_bug.cgi?id=23848
Summary
REGRESSION: Crash when mouse cursor moves over a link on www.opportuno.de
Mehmet
Reported
2009-02-09 09:35:44 PST
Hello Webkit-Team, latest Webkit (
r40777
) crashes when I hove with the mousecursor over a link (and the popup comes up) on the following website:
http://www.opportuno.de/stellenangebote_sap_inregionsiegen%20(57...).html
Thank you in advance. Mehmet
Attachments
crash-log
(32.40 KB, text/plain)
2009-02-09 09:51 PST
,
Mehmet
no flags
Details
Reduction (will crash)
(364 bytes, text/html)
2009-02-27 17:25 PST
,
mitz
no flags
Details
Move code to invalidate z-order lists on style change from RenderBox to RenderBoxModeObject
(44.13 KB, patch)
2009-02-27 23:53 PST
,
mitz
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mehmet
Comment 1
2009-02-09 09:51:47 PST
Created
attachment 27485
[details]
crash-log
Alexey Proskuryakov
Comment 2
2009-02-10 11:59:52 PST
Confirmed as a regression with
r40827
.
Alexey Proskuryakov
Comment 3
2009-02-10 12:00:44 PST
<
rdar://problem/6573250
>
mitz
Comment 4
2009-02-27 17:25:10 PST
Created
attachment 28109
[details]
Reduction (will crash)
mitz
Comment 5
2009-02-27 23:53:36 PST
Created
attachment 28112
[details]
Move code to invalidate z-order lists on style change from RenderBox to RenderBoxModeObject
mitz
Comment 6
2009-02-28 01:45:13 PST
Fixed in <
http://trac.webkit.org/changeset/41317
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug