WebCore:

Reviewed by Oliver Hunt.

        - fix https://bugs.webkit.org/show_bug.cgi?id=23848
          <rdar://problem/6573250> REGRESSION: Crash when mouse cursor moves over a link on www.opportuno.de

        Test: fast/layers/inline-dirty-z-order-lists.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::styleWillChange): Moved the code that dirties a
        layer's and its stacking context's z-order lists when the layer's
        z-index or visibility change from here...
        * rendering/RenderBoxModelObject.cpp:
        (WebCore::RenderBoxModelObject::styleWillChange): ...to here, so that
        it will apply to RenderInline too.

LayoutTests:

        Reviewed by Oliver Hunt.

        - test for https://bugs.webkit.org/show_bug.cgi?id=23848
          <rdar://problem/6573250> REGRESSION: Crash when mouse cursor moves over a link on www.opportuno.de

        * fast/layers/inline-dirty-z-order-lists.html: Added.
        * platform/mac/fast/layers/inline-dirty-z-order-lists-expected.checksum: Added.
        * platform/mac/fast/layers/inline-dirty-z-order-lists-expected.png: Added.
        * platform/mac/fast/layers/inline-dirty-z-order-lists-expected.txt: Added.



Canonical link: https://commits.webkit.org/33387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41317 268f45cc-cd09-0410-ab3c-d52691b4dbfc